[package]
name = "deschiffresetdeslettres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = { version = "0.5.6", features = ["crossbeam-utils"] }
crossbeam-utils = "0.8.14"
itertools = "0.10.5"