[package]
name = "deschiffres"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
wasm = ["dep:serde", "dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:console_error_panic_hook"]

[dependencies]
crossbeam-channel = { version = "0.5.6", features = ["crossbeam-utils"] }
crossbeam-utils = "0.8.14"
itertools = "0.10.5"
cfg-if = "1.0.0"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
serde = {version = "1.0", features = ["derive"], optional = true}
wasm-bindgen = {version = "0.2", optional = true}
serde-wasm-bindgen = {version = "0.4", optional = true}
console_error_panic_hook = { version = "0.1.7", optional = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = {version = "0.4.5"}


[profile.release]
lto = true
opt-level = 's' # z | s
